mmc: core: SPI mode remove cmd7 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11150,6 +11150,7 @@
 	patches.kernel.org/6.12.54-166-xtensa-simdisk-add-input-size-check-in-proc_w.patch
 	patches.kernel.org/6.12.54-167-xsk-Harden-userspace-supplied-xdp_desc-valida.patch
 	patches.kernel.org/6.12.54-168-mtd-rawnand-fsmc-Default-to-autodetect-buswid.patch
+	patches.kernel.org/6.12.54-169-mmc-core-SPI-mode-remove-cmd7.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
