--- a/series.conf
+++ b/series.conf
@@ -11129,6 +11129,7 @@
 	patches.kernel.org/6.12.54-145-kernel-sys.c-fix-the-racy-usage-of-task_lock-.patch
 	patches.kernel.org/6.12.54-146-KEYS-trusted_tpm1-Compare-HMAC-values-in-cons.patch
 	patches.kernel.org/6.12.54-147-lib-genalloc-fix-device-leak-in-of_gen_pool_g.patch
+	patches.kernel.org/6.12.54-148-loop-fix-backing-file-reference-leak-on-valid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
