parisc: don't reference obsolete termio struct for TC* constants (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11132,6 +11132,7 @@
 	patches.kernel.org/6.12.54-148-loop-fix-backing-file-reference-leak-on-valid.patch
 	patches.kernel.org/6.12.54-149-of-unittest-Fix-device-reference-count-leak-i.patch
 	patches.kernel.org/6.12.54-150-openat2-don-t-trigger-automounts-with-RESOLVE.patch
+	patches.kernel.org/6.12.54-151-parisc-don-t-reference-obsolete-termio-struct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
