s390/vmlinux.lds.S: Move .vmlinux.info to end of allocatable sections (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11065,6 +11065,7 @@
 	patches.kernel.org/6.12.54-081-gpio-wcd934x-mark-the-GPIO-controller-as-slee.patch
 	patches.kernel.org/6.12.54-082-bpf-Avoid-RCU-context-warning-when-unpinning-.patch
 	patches.kernel.org/6.12.54-083-s390-vmlinux.lds.S-Reorder-sections.patch
+	patches.kernel.org/6.12.54-084-s390-vmlinux.lds.S-Move-.vmlinux.info-to-end-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
