clk: nxp: lpc18xx-cgu: convert from round_rate() to determine_rate() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11017,6 +11017,7 @@
 	patches.kernel.org/6.12.54-033-perf-evsel-Ensure-the-fallback-message-is-alw.patch
 	patches.kernel.org/6.12.54-034-clk-mediatek-mt8195-infra_ao-Fix-parent-for-i.patch
 	patches.kernel.org/6.12.54-035-clk-mediatek-clk-mux-Do-not-pass-flags-to-clk.patch
+	patches.kernel.org/6.12.54-036-clk-nxp-lpc18xx-cgu-convert-from-round_rate-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
