--- a/series.conf
+++ b/series.conf
@@ -11040,6 +11040,7 @@
 	patches.kernel.org/6.12.54-056-ice-ice_adapter-release-xa-entry-on-adapter-a.patch
 	patches.kernel.org/6.12.54-057-net-fsl_pq_mdio-Fix-device-node-reference-lea.patch
 	patches.kernel.org/6.12.54-058-tools-build-Align-warning-options-with-perf.patch
+	patches.kernel.org/6.12.54-059-perf-python-split-Clang-options-when-invoking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
