ARM: OMAP2+: pm33xx-core: ix device node reference leaks in amx3_idle_init (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11076,6 +11076,7 @@
 	patches.kernel.org/6.12.54-092-arm64-dts-ti-k3-am62a-main-Fix-main-padcfg-le.patch
 	patches.kernel.org/6.12.54-093-arm64-kprobes-call-set_memory_rox-for-kprobe-.patch
 	patches.kernel.org/6.12.54-094-ARM-AM33xx-Implement-TI-advisory-1.0.36-EMU0-.patch
+	patches.kernel.org/6.12.54-095-ARM-OMAP2-pm33xx-core-ix-device-node-referenc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
