writeback: Avoid softlockup when switching many inodes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11251,6 +11251,7 @@
 	patches.kernel.org/6.12.54-267-pid-Add-a-judgment-for-ns-null-in-pid_nr_ns.patch
 	patches.kernel.org/6.12.54-268-fs-Add-initramfs_options-to-set-initramfs-mou.patch
 	patches.kernel.org/6.12.54-269-cramfs-Verify-inode-mode-when-loading-from-di.patch
+	patches.kernel.org/6.12.54-270-writeback-Avoid-softlockup-when-switching-man.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
