--- a/series.conf
+++ b/series.conf
@@ -11045,6 +11045,7 @@
 	patches.kernel.org/6.12.54-061-mailbox-zynqmp-ipi-Remove-redundant-mbox_cont.patch
 	patches.kernel.org/6.12.54-062-mailbox-zynqmp-ipi-Remove-dev.parent-check-in.patch
 	patches.kernel.org/6.12.54-063-mailbox-zynqmp-ipi-Fix-out-of-bounds-access-i.patch
+	patches.kernel.org/6.12.54-064-mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
