PCI: tegra194: Fix broken tegra_pcie_ep_raise_msi_irq() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11168,6 +11168,7 @@
 	patches.kernel.org/6.12.54-184-PCI-rcar-gen4-Fix-PHY-initialization.patch
 	patches.kernel.org/6.12.54-185-PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.kernel.org/6.12.54-186-PCI-rcar-host-Convert-struct-rcar_msi-mask_lo.patch
+	patches.kernel.org/6.12.54-187-PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
