clk: renesas: cpg-mssr: Fix memory leak in cpg_mssr_reserved_init() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11000,6 +11000,7 @@
 	patches.kernel.org/6.12.54-016-libperf-event-Ensure-tracing-data-is-multiple.patch
 	patches.kernel.org/6.12.54-017-clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-q.patch
 	patches.kernel.org/6.12.54-018-clk-at91-peripheral-fix-return-value.patch
+	patches.kernel.org/6.12.54-019-clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
