media: cx18: Add missing check after DMA map (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11085,6 +11085,7 @@
 	patches.kernel.org/6.12.54-101-xen-events-Update-virq_to_irq-on-migration.patch
 	patches.kernel.org/6.12.54-102-firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.kernel.org/6.12.54-103-media-cec-extron-da-hd-4k-plus-drop-external-.patch
+	patches.kernel.org/6.12.54-104-media-cx18-Add-missing-check-after-DMA-map.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
