tcp: take care of zero tp->window_clamp in tcp_set_rcvlowat() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11041,6 +11041,7 @@
 	patches.kernel.org/6.12.54-057-net-fsl_pq_mdio-Fix-device-node-reference-lea.patch
 	patches.kernel.org/6.12.54-058-tools-build-Align-warning-options-with-perf.patch
 	patches.kernel.org/6.12.54-059-perf-python-split-Clang-options-when-invoking.patch
+	patches.kernel.org/6.12.54-060-tcp-take-care-of-zero-tp-window_clamp-in-tcp_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
