bridge: br_vlan_fill_forward_path_pvid: use br_vlan_group_rcu() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11055,6 +11055,7 @@
 	patches.kernel.org/6.12.54-071-drm-amd-display-Properly-clear-SCL_-_FILTER_C.patch
 	patches.kernel.org/6.12.54-072-drm-amd-display-Properly-disable-scaling-on-D.patch
 	patches.kernel.org/6.12.54-073-netfilter-nft_objref-validate-objref-and-objr.patch
+	patches.kernel.org/6.12.54-074-bridge-br_vlan_fill_forward_path_pvid-use-br_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
