--- a/series.conf
+++ b/series.conf
@@ -11052,6 +11052,7 @@
 	patches.kernel.org/6.12.54-068-mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-.patch
 	patches.kernel.org/6.12.54-069-drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 	patches.kernel.org/6.12.54-070-drm-amd-display-Add-missing-DCE6-SCL_HORZ_FIL.patch
+	patches.kernel.org/6.12.54-071-drm-amd-display-Properly-clear-SCL_-_FILTER_C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
