scsi: mvsas: Fix use-after-free bugs in mvs_work_queue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11021,6 +11021,7 @@
 	patches.kernel.org/6.12.54-037-clk-nxp-Fix-pll0-rate-check-condition-in-LPC1.patch
 	patches.kernel.org/6.12.54-038-clk-tegra-do-not-overallocate-memory-for-bpmp.patch
 	patches.kernel.org/6.12.54-039-cpufreq-tegra186-Set-target-frequency-for-all.patch
+	patches.kernel.org/6.12.54-040-scsi-mvsas-Fix-use-after-free-bugs-in-mvs_wor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
