Revert "ipmi: fix msg stack when IPMI is disconnected" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11140,6 +11140,7 @@
 	patches.kernel.org/6.12.54-156-powerpc-powernv-pci-Fix-underflow-and-leak-is.patch
 	patches.kernel.org/6.12.54-157-powerpc-pseries-msi-Fix-potential-underflow-a.patch
 	patches.kernel.org/6.12.54-158-pwm-berlin-Fix-wrong-register-in-suspend-resu.patch
+	patches.kernel.org/6.12.54-159-Revert-ipmi-fix-msg-stack-when-IPMI-is-discon.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
