arm64: map [_text, _stext) virtual address range non-executable+read-only (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10984,6 +10984,7 @@
 	patches.kernel.org/6.12.53-261-Linux-6.12.53.patch
 	patches.kernel.org/6.12.54-001-fs-always-return-zero-on-success-from-replace.patch
 	patches.kernel.org/6.12.54-002-fscontext-do-not-consume-log-entries-when-ret.patch
+	patches.kernel.org/6.12.54-003-arm64-map-_text-_stext-virtual-address-range-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
