arm64: dts: qcom: msm8939: Add missing MDSS reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11070,6 +11070,7 @@
 	patches.kernel.org/6.12.54-086-ACPI-TAD-Add-missing-sysfs_remove_group-for-A.patch
 	patches.kernel.org/6.12.54-087-ACPI-debug-fix-signedness-issues-in-read-writ.patch
 	patches.kernel.org/6.12.54-088-arm64-dts-qcom-msm8916-Add-missing-MDSS-reset.patch
+	patches.kernel.org/6.12.54-089-arm64-dts-qcom-msm8939-Add-missing-MDSS-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
