ACPI: property: Add code comments explaining what is going on (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11234,6 +11234,7 @@
 	patches.kernel.org/6.12.54-250-ACPI-battery-Check-for-error-code-from-devm_m.patch
 	patches.kernel.org/6.12.54-251-ACPI-battery-Add-synchronization-between-inte.patch
 	patches.kernel.org/6.12.54-252-ACPI-property-Disregard-references-in-data-on.patch
+	patches.kernel.org/6.12.54-253-ACPI-property-Add-code-comments-explaining-wh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
