--- a/series.conf
+++ b/series.conf
@@ -11259,6 +11259,7 @@
 	patches.kernel.org/6.12.54-275-nfsd-fix-access-checking-for-NLM-under-XPRTSE.patch
 	patches.kernel.org/6.12.54-276-ASoC-SOF-ipc4-pcm-fix-start-offset-calculatio.patch
 	patches.kernel.org/6.12.54-277-mount-handle-NULL-values-in-mnt_ns_release.patch
+	patches.kernel.org/6.12.54-278-nfsd-decouple-the-xprtsec-policy-check-from-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
