--- a/series.conf
+++ b/series.conf
@@ -10997,6 +10997,7 @@
 	patches.kernel.org/6.12.54-013-perf-disasm-Avoid-undefined-behavior-in-incre.patch
 	patches.kernel.org/6.12.54-014-perf-test-trace_btf_enum-Skip-if-permissions-.patch
 	patches.kernel.org/6.12.54-015-perf-evsel-Avoid-container_of-on-a-NULL-leade.patch
+	patches.kernel.org/6.12.54-016-libperf-event-Ensure-tracing-data-is-multiple.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
