--- a/series.conf
+++ b/series.conf
@@ -11037,6 +11037,7 @@
 	patches.kernel.org/6.12.54-053-net-sctp-fix-a-null-dereference-in-sctp_dispo.patch
 	patches.kernel.org/6.12.54-054-tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_c.patch
 	patches.kernel.org/6.12.54-055-net-mscc-ocelot-Fix-use-after-free-caused-by-.patch
+	patches.kernel.org/6.12.54-056-ice-ice_adapter-release-xa-entry-on-adapter-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
