--- a/series.conf
+++ b/series.conf
@@ -11079,6 +11079,7 @@
 	patches.kernel.org/6.12.54-095-ARM-OMAP2-pm33xx-core-ix-device-node-referenc.patch
 	patches.kernel.org/6.12.54-096-perf-arm-cmn-Fix-CMN-S3-DTM-offset.patch
 	patches.kernel.org/6.12.54-097-dt-bindings-phy-rockchip-inno-csi-dphy-make-p.patch
+	patches.kernel.org/6.12.54-098-xen-events-Cleanup-find_virq-return-codes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
