--- a/series.conf
+++ b/series.conf
@@ -11059,6 +11059,7 @@
 	patches.kernel.org/6.12.54-075-selftests-netfilter-query-conntrack-state-to-.patch
 	patches.kernel.org/6.12.54-076-crypto-essiv-Check-ssize-for-decryption-and-i.patch
 	patches.kernel.org/6.12.54-077-cifs-Fix-copy_to_iter-return-value-check.patch
+	patches.kernel.org/6.12.54-078-smb-client-fix-missing-timestamp-updates-afte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
