PCI/AER: Fix missing uevent on recovery when a reset is requested (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11161,6 +11161,7 @@
 	patches.kernel.org/6.12.54-177-PCI-sysfs-Ensure-devices-are-powered-for-conf.patch
 	patches.kernel.org/6.12.54-178-PCI-IOV-Add-PCI-rescan-remove-locking-when-en.patch
 	patches.kernel.org/6.12.54-179-PCI-ERR-Fix-uevent-on-failure-to-recover.patch
+	patches.kernel.org/6.12.54-180-PCI-AER-Fix-missing-uevent-on-recovery-when-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
