--- a/series.conf
+++ b/series.conf
@@ -11172,6 +11172,7 @@
 	patches.kernel.org/6.12.54-188-PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.kernel.org/6.12.54-189-PCI-tegra194-Reset-BARs-when-running-in-PCIe-.patch
 	patches.kernel.org/6.12.54-190-spi-cadence-quadspi-Flush-posted-register-wri.patch
+	patches.kernel.org/6.12.54-191-spi-cadence-quadspi-Flush-posted-register-wri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
