drm/vmwgfx: Fix a null-ptr access in the cursor snooper (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11031,6 +11031,7 @@
 	patches.kernel.org/6.12.54-047-net-mlx4-prevent-potential-use-after-free-in-.patch
 	patches.kernel.org/6.12.54-048-drm-xe-hw_engine_group-Fix-double-write-lock-.patch
 	patches.kernel.org/6.12.54-049-s390-cio-Update-purge-function-to-unregister-.patch
+	patches.kernel.org/6.12.54-050-drm-vmwgfx-Fix-a-null-ptr-access-in-the-curso.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
