ASoC: SOF: ipc4-pcm: Enable delay reporting for ChainDMA streams (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11212,6 +11212,7 @@
 	patches.kernel.org/6.12.54-228-mm-ksm-fix-incorrect-KSM-counter-handling-in-.patch
 	patches.kernel.org/6.12.54-229-PCI-endpoint-Remove-surplus-return-statement-.patch
 	patches.kernel.org/6.12.54-230-PCI-endpoint-pci-epf-test-Add-NULL-check-for-.patch
+	patches.kernel.org/6.12.54-231-ASoC-SOF-ipc4-pcm-Enable-delay-reporting-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
