--- a/series.conf
+++ b/series.conf
@@ -11205,6 +11205,7 @@
 	patches.kernel.org/6.12.54-221-ext4-free-orphan-info-with-kvfree.patch
 	patches.kernel.org/6.12.54-222-lib-crypto-curve25519-hacl64-Disable-KASAN-wi.patch
 	patches.kernel.org/6.12.54-223-selftests-mm-skip-soft-dirty-tests-when-CONFI.patch
+	patches.kernel.org/6.12.54-224-media-mc-Clear-minor-number-before-put-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
