--- a/series.conf
+++ b/series.conf
@@ -11139,6 +11139,7 @@
 	patches.kernel.org/6.12.54-155-power-supply-max77976_charger-fix-constant-cu.patch
 	patches.kernel.org/6.12.54-156-powerpc-powernv-pci-Fix-underflow-and-leak-is.patch
 	patches.kernel.org/6.12.54-157-powerpc-pseries-msi-Fix-potential-underflow-a.patch
+	patches.kernel.org/6.12.54-158-pwm-berlin-Fix-wrong-register-in-suspend-resu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
