mm/damon/vaddr: do not repeat pte_offset_map_lock() until success (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11189,6 +11189,7 @@
 	patches.kernel.org/6.12.54-205-mm-thp-fix-MTE-tag-mismatch-when-replacing-ze.patch
 	patches.kernel.org/6.12.54-206-mm-page_alloc-only-set-ALLOC_HIGHATOMIC-for-_.patch
 	patches.kernel.org/6.12.54-207-mm-hugetlb-early-exit-from-hugetlb_pages_allo.patch
+	patches.kernel.org/6.12.54-208-mm-damon-vaddr-do-not-repeat-pte_offset_map_l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
