--- a/series.conf
+++ b/series.conf
@@ -11219,6 +11219,7 @@
 	patches.kernel.org/6.12.54-235-mfd-intel_soc_pmic_chtdc_ti-Set-use_single_re.patch
 	patches.kernel.org/6.12.54-236-btrfs-fix-the-incorrect-max_bytes-value-for-f.patch
 	patches.kernel.org/6.12.54-237-cpufreq-Make-drivers-using-CPUFREQ_ETERNAL-sp.patch
+	patches.kernel.org/6.12.54-238-KVM-x86-Advertise-SRSO_USER_KERNEL_NO-to-user.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
