--- a/series.conf
+++ b/series.conf
@@ -11026,6 +11026,7 @@
 	patches.kernel.org/6.12.54-042-ASoC-SOF-ipc4-topology-Account-for-different-.patch
 	patches.kernel.org/6.12.54-043-ASoC-SOF-Intel-hda-pcm-Place-the-constraint-o.patch
 	patches.kernel.org/6.12.54-044-LoongArch-Add-cflag-fno-isolate-erroneous-pat.patch
+	patches.kernel.org/6.12.54-045-LoongArch-Init-acpi_gbl_use_global_lock-to-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
