spi: cadence-quadspi: Fix cqspi_setup_flash() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11173,6 +11173,7 @@
 	patches.kernel.org/6.12.54-189-PCI-tegra194-Reset-BARs-when-running-in-PCIe-.patch
 	patches.kernel.org/6.12.54-190-spi-cadence-quadspi-Flush-posted-register-wri.patch
 	patches.kernel.org/6.12.54-191-spi-cadence-quadspi-Flush-posted-register-wri.patch
+	patches.kernel.org/6.12.54-192-spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
