rtc: optee: fix memory leak on driver removal (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11003,6 +11003,7 @@
 	patches.kernel.org/6.12.54-019-clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_m.patch
 	patches.kernel.org/6.12.54-020-perf-util-Fix-compression-checks-returning-1-.patch
 	patches.kernel.org/6.12.54-021-rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
+	patches.kernel.org/6.12.54-022-rtc-optee-fix-memory-leak-on-driver-removal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
