--- a/series.conf
+++ b/series.conf
@@ -11193,6 +11193,7 @@
 	patches.kernel.org/6.12.54-209-mm-damon-lru_sort-use-param_ctx-for-damon_att.patch
 	patches.kernel.org/6.12.54-210-NFSD-Fix-destination-buffer-size-in-nfsd4_ssc.patch
 	patches.kernel.org/6.12.54-211-nfsd-nfserr_jukebox-in-nlm_fopen-should-lead-.patch
+	patches.kernel.org/6.12.54-212-ext4-add-ext4_sb_bread_nofail-helper-function.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
