fuse: fix possibly missing fuse_copy_finish() call in fuse_notify() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11115,6 +11115,7 @@
 	patches.kernel.org/6.12.54-131-fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.kernel.org/6.12.54-132-fs-ntfs3-Fix-a-resource-leak-bug-in-wnd_exten.patch
 	patches.kernel.org/6.12.54-133-fs-quota-create-dedicated-workqueue-for-quota.patch
+	patches.kernel.org/6.12.54-134-fuse-fix-possibly-missing-fuse_copy_finish-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
