--- a/series.conf
+++ b/series.conf
@@ -11136,6 +11136,7 @@
 	patches.kernel.org/6.12.54-152-parisc-Remove-spurious-if-statement-from-raw_.patch
 	patches.kernel.org/6.12.54-153-nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep.patch
 	patches.kernel.org/6.12.54-154-pinctrl-samsung-Drop-unused-S3C24xx-driver-da.patch
+	patches.kernel.org/6.12.54-155-power-supply-max77976_charger-fix-constant-cu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
