perf test: Add a test for default perf stat command (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11012,6 +11012,7 @@
 	patches.kernel.org/6.12.54-028-perf-test-shell-lbr-Avoid-failures-with-perf-.patch
 	patches.kernel.org/6.12.54-029-perf-session-Fix-handling-when-buffer-exceeds.patch
 	patches.kernel.org/6.12.54-030-perf-test-Don-t-leak-workload-gopipe-in-PERF_.patch
+	patches.kernel.org/6.12.54-031-perf-test-Add-a-test-for-default-perf-stat-co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
