--- a/series.conf
+++ b/series.conf
@@ -11081,6 +11081,7 @@
 	patches.kernel.org/6.12.54-097-dt-bindings-phy-rockchip-inno-csi-dphy-make-p.patch
 	patches.kernel.org/6.12.54-098-xen-events-Cleanup-find_virq-return-codes.patch
 	patches.kernel.org/6.12.54-099-xen-manage-Fix-suspend-error-path.patch
+	patches.kernel.org/6.12.54-100-xen-events-Return-EEXIST-for-bound-VIRQs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
