--- a/series.conf
+++ b/series.conf
@@ -10982,6 +10982,7 @@
 	patches.kernel.org/6.12.53-259-arm64-dts-qcom-qcm2290-Disable-USB-SS-bus-ins.patch
 	patches.kernel.org/6.12.53-260-usb-cdns3-cdnsp-pci-remove-redundant-pci_disa.patch
 	patches.kernel.org/6.12.53-261-Linux-6.12.53.patch
+	patches.kernel.org/6.12.54-001-fs-always-return-zero-on-success-from-replace.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
