perf test stat: Avoid hybrid assumption when virtualized (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11254,6 +11254,7 @@
 	patches.kernel.org/6.12.54-270-writeback-Avoid-softlockup-when-switching-man.patch
 	patches.kernel.org/6.12.54-271-writeback-Avoid-excessively-long-inode-switch.patch
 	patches.kernel.org/6.12.54-272-sched-fair-Block-delayed-tasks-on-throttled-h.patch
+	patches.kernel.org/6.12.54-273-perf-test-stat-Avoid-hybrid-assumption-when-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
