xen/manage: Fix suspend error path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11080,6 +11080,7 @@
 	patches.kernel.org/6.12.54-096-perf-arm-cmn-Fix-CMN-S3-DTM-offset.patch
 	patches.kernel.org/6.12.54-097-dt-bindings-phy-rockchip-inno-csi-dphy-make-p.patch
 	patches.kernel.org/6.12.54-098-xen-events-Cleanup-find_virq-return-codes.patch
+	patches.kernel.org/6.12.54-099-xen-manage-Fix-suspend-error-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
