iommu/vt-d: PRS isn't usable if PDS isn't supported (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11125,6 +11125,7 @@
 	patches.kernel.org/6.12.54-141-iio-xilinx-ams-Unmask-interrupts-after-updati.patch
 	patches.kernel.org/6.12.54-142-init-handle-bootloader-identifier-in-kernel-p.patch
 	patches.kernel.org/6.12.54-143-iio-imu-inv_icm42600-Drop-redundant-pm_runtim.patch
+	patches.kernel.org/6.12.54-144-iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
