--- a/series.conf
+++ b/series.conf
@@ -10995,6 +10995,7 @@
 	patches.kernel.org/6.12.54-011-media-v4l2-subdev-Fix-alloc-failure-check-in-.patch
 	patches.kernel.org/6.12.54-012-asm-generic-io.h-Skip-trace-helpers-if-rwmmio.patch
 	patches.kernel.org/6.12.54-013-perf-disasm-Avoid-undefined-behavior-in-incre.patch
+	patches.kernel.org/6.12.54-014-perf-test-trace_btf_enum-Skip-if-permissions-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
