nfsd: unregister with rpcbind when deleting a transport (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11228,6 +11228,7 @@
 	patches.kernel.org/6.12.54-244-NFSD-Replace-use-of-NFSD_MAY_LOCK-in-nfsd4_lo.patch
 	patches.kernel.org/6.12.54-245-nfsd-refine-and-rename-NFSD_MAY_LOCK.patch
 	patches.kernel.org/6.12.54-246-nfsd-don-t-use-sv_nrthreads-in-connection-lim.patch
+	patches.kernel.org/6.12.54-247-nfsd-unregister-with-rpcbind-when-deleting-a-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
