--- a/series.conf
+++ b/series.conf
@@ -11054,6 +11054,7 @@
 	patches.kernel.org/6.12.54-070-drm-amd-display-Add-missing-DCE6-SCL_HORZ_FIL.patch
 	patches.kernel.org/6.12.54-071-drm-amd-display-Properly-clear-SCL_-_FILTER_C.patch
 	patches.kernel.org/6.12.54-072-drm-amd-display-Properly-disable-scaling-on-D.patch
+	patches.kernel.org/6.12.54-073-netfilter-nft_objref-validate-objref-and-objr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
