ext4: fix an off-by-one issue during moving extents (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11198,6 +11198,7 @@
 	patches.kernel.org/6.12.54-214-ext4-increase-i_disksize-to-offset-len-in-ext.patch
 	patches.kernel.org/6.12.54-215-ext4-correctly-handle-queries-for-metadata-ma.patch
 	patches.kernel.org/6.12.54-216-ext4-avoid-potential-buffer-over-read-in-pars.patch
+	patches.kernel.org/6.12.54-217-ext4-fix-an-off-by-one-issue-during-moving-ex.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
