clk: mediatek: clk-mux: Do not pass flags to clk_mux_determine_rate_flags() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11016,6 +11016,7 @@
 	patches.kernel.org/6.12.54-032-perf-tools-Add-fallback-for-exclude_guest.patch
 	patches.kernel.org/6.12.54-033-perf-evsel-Ensure-the-fallback-message-is-alw.patch
 	patches.kernel.org/6.12.54-034-clk-mediatek-mt8195-infra_ao-Fix-parent-for-i.patch
+	patches.kernel.org/6.12.54-035-clk-mediatek-clk-mux-Do-not-pass-flags-to-clk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
