clk: mediatek: mt8195-infra_ao: Fix parent for infra_ao_hdmi_26m (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11015,6 +11015,7 @@
 	patches.kernel.org/6.12.54-031-perf-test-Add-a-test-for-default-perf-stat-co.patch
 	patches.kernel.org/6.12.54-032-perf-tools-Add-fallback-for-exclude_guest.patch
 	patches.kernel.org/6.12.54-033-perf-evsel-Ensure-the-fallback-message-is-alw.patch
+	patches.kernel.org/6.12.54-034-clk-mediatek-mt8195-infra_ao-Fix-parent-for-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
