--- a/series.conf
+++ b/series.conf
@@ -11024,6 +11024,7 @@
 	patches.kernel.org/6.12.54-040-scsi-mvsas-Fix-use-after-free-bugs-in-mvs_wor.patch
 	patches.kernel.org/6.12.54-041-ASoC-SOF-ipc4-topology-Correct-the-minimum-ho.patch
 	patches.kernel.org/6.12.54-042-ASoC-SOF-ipc4-topology-Account-for-different-.patch
+	patches.kernel.org/6.12.54-043-ASoC-SOF-Intel-hda-pcm-Place-the-constraint-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
