PCI: tegra: Convert struct tegra_msi mask_lock into raw spinlock (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11157,6 +11157,7 @@
 	patches.kernel.org/6.12.54-173-rtc-interface-Fix-long-standing-race-when-set.patch
 	patches.kernel.org/6.12.54-174-rseq-selftests-Use-weak-symbol-reference-not-.patch
 	patches.kernel.org/6.12.54-175-PCI-xilinx-nwl-Fix-ECAM-programming.patch
+	patches.kernel.org/6.12.54-176-PCI-tegra-Convert-struct-tegra_msi-mask_lock-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
