s390/cio: Update purge function to unregister the unused subchannels (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11030,6 +11030,7 @@
 	patches.kernel.org/6.12.54-046-ASoC-SOF-Intel-Read-the-LLP-via-the-associate.patch
 	patches.kernel.org/6.12.54-047-net-mlx4-prevent-potential-use-after-free-in-.patch
 	patches.kernel.org/6.12.54-048-drm-xe-hw_engine_group-Fix-double-write-lock-.patch
+	patches.kernel.org/6.12.54-049-s390-cio-Update-purge-function-to-unregister-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
