pid: Add a judgment for ns null in pid_nr_ns (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11248,6 +11248,7 @@
 	patches.kernel.org/6.12.54-264-irqchip-sifive-plic-Avoid-interrupt-ID-0-hand.patch
 	patches.kernel.org/6.12.54-265-copy_file_range-limit-size-if-in-compat-mode.patch
 	patches.kernel.org/6.12.54-266-minixfs-Verify-inode-mode-when-loading-from-d.patch
+	patches.kernel.org/6.12.54-267-pid-Add-a-judgment-for-ns-null-in-pid_nr_ns.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
