cpufreq: intel_pstate: Fix object lifecycle issue in update_qos_request() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11107,6 +11107,7 @@
 	patches.kernel.org/6.12.54-123-bus-mhi-host-Do-not-use-uninitialized-dev-poi.patch
 	patches.kernel.org/6.12.54-124-clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-p.patch
 	patches.kernel.org/6.12.54-125-copy_sighand-Handle-architectures-where-sizeo.patch
+	patches.kernel.org/6.12.54-126-cpufreq-intel_pstate-Fix-object-lifecycle-iss.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
