ipmi: Rework user message limit handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11237,6 +11237,7 @@
 	patches.kernel.org/6.12.54-253-ACPI-property-Add-code-comments-explaining-wh.patch
 	patches.kernel.org/6.12.54-254-ACPI-property-Do-not-pass-NULL-handles-to-acp.patch
 	patches.kernel.org/6.12.54-255-mptcp-pm-in-kernel-usable-client-side-with-C-.patch
+	patches.kernel.org/6.12.54-256-ipmi-Rework-user-message-limit-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
