--- a/series.conf
+++ b/series.conf
@@ -11075,6 +11075,7 @@
 	patches.kernel.org/6.12.54-091-arm64-dts-qcom-x1e80100-pmics-Disable-pm8010-.patch
 	patches.kernel.org/6.12.54-092-arm64-dts-ti-k3-am62a-main-Fix-main-padcfg-le.patch
 	patches.kernel.org/6.12.54-093-arm64-kprobes-call-set_memory_rox-for-kprobe-.patch
+	patches.kernel.org/6.12.54-094-ARM-AM33xx-Implement-TI-advisory-1.0.36-EMU0-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
