--- a/series.conf
+++ b/series.conf
@@ -11174,6 +11174,7 @@
 	patches.kernel.org/6.12.54-190-spi-cadence-quadspi-Flush-posted-register-wri.patch
 	patches.kernel.org/6.12.54-191-spi-cadence-quadspi-Flush-posted-register-wri.patch
 	patches.kernel.org/6.12.54-192-spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
+	patches.kernel.org/6.12.54-193-x86-fred-Remove-ENDBR64-from-FRED-entry-point.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
