lib/crypto/curve25519-hacl64: Disable KASAN with clang-17 and older (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11203,6 +11203,7 @@
 	patches.kernel.org/6.12.54-219-ext4-validate-ea_ino-and-size-in-check_xattrs.patch
 	patches.kernel.org/6.12.54-220-ACPICA-Allow-to-skip-Global-Lock-initializati.patch
 	patches.kernel.org/6.12.54-221-ext4-free-orphan-info-with-kvfree.patch
+	patches.kernel.org/6.12.54-222-lib-crypto-curve25519-hacl64-Disable-KASAN-wi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
