--- a/series.conf
+++ b/series.conf
@@ -11133,6 +11133,7 @@
 	patches.kernel.org/6.12.54-149-of-unittest-Fix-device-reference-count-leak-i.patch
 	patches.kernel.org/6.12.54-150-openat2-don-t-trigger-automounts-with-RESOLVE.patch
 	patches.kernel.org/6.12.54-151-parisc-don-t-reference-obsolete-termio-struct.patch
+	patches.kernel.org/6.12.54-152-parisc-Remove-spurious-if-statement-from-raw_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
