--- a/series.conf
+++ b/series.conf
@@ -11217,6 +11217,7 @@
 	patches.kernel.org/6.12.54-233-mfd-intel_soc_pmic_chtdc_ti-Fix-invalid-regma.patch
 	patches.kernel.org/6.12.54-234-mfd-intel_soc_pmic_chtdc_ti-Drop-unneeded-ass.patch
 	patches.kernel.org/6.12.54-235-mfd-intel_soc_pmic_chtdc_ti-Set-use_single_re.patch
+	patches.kernel.org/6.12.54-236-btrfs-fix-the-incorrect-max_bytes-value-for-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
