mailbox: zynqmp-ipi: Fix out-of-bounds access in mailbox cleanup loop (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11044,6 +11044,7 @@
 	patches.kernel.org/6.12.54-060-tcp-take-care-of-zero-tp-window_clamp-in-tcp_.patch
 	patches.kernel.org/6.12.54-061-mailbox-zynqmp-ipi-Remove-redundant-mbox_cont.patch
 	patches.kernel.org/6.12.54-062-mailbox-zynqmp-ipi-Remove-dev.parent-check-in.patch
+	patches.kernel.org/6.12.54-063-mailbox-zynqmp-ipi-Fix-out-of-bounds-access-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
