mailbox: mtk-cmdq: Switch to pm_runtime_put_autosuspend() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11048,6 +11048,7 @@
 	patches.kernel.org/6.12.54-064-mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 	patches.kernel.org/6.12.54-065-bpf-Fix-metadata_dst-leak-__bpf_redirect_neig.patch
 	patches.kernel.org/6.12.54-066-mailbox-mtk-cmdq-mailbox-Switch-to-__pm_runti.patch
+	patches.kernel.org/6.12.54-067-mailbox-mtk-cmdq-Switch-to-pm_runtime_put_aut.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
