perf disasm: Avoid undefined behavior in incrementing NULL (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10994,6 +10994,7 @@
 	patches.kernel.org/6.12.54-010-iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_.patch
 	patches.kernel.org/6.12.54-011-media-v4l2-subdev-Fix-alloc-failure-check-in-.patch
 	patches.kernel.org/6.12.54-012-asm-generic-io.h-Skip-trace-helpers-if-rwmmio.patch
+	patches.kernel.org/6.12.54-013-perf-disasm-Avoid-undefined-behavior-in-incre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
