drm/amdgpu: Add additional DCE6 SCL registers (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11050,6 +11050,7 @@
 	patches.kernel.org/6.12.54-066-mailbox-mtk-cmdq-mailbox-Switch-to-__pm_runti.patch
 	patches.kernel.org/6.12.54-067-mailbox-mtk-cmdq-Switch-to-pm_runtime_put_aut.patch
 	patches.kernel.org/6.12.54-068-mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-.patch
+	patches.kernel.org/6.12.54-069-drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
