--- a/series.conf
+++ b/series.conf
@@ -10999,6 +10999,7 @@
 	patches.kernel.org/6.12.54-015-perf-evsel-Avoid-container_of-on-a-NULL-leade.patch
 	patches.kernel.org/6.12.54-016-libperf-event-Ensure-tracing-data-is-multiple.patch
 	patches.kernel.org/6.12.54-017-clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-q.patch
+	patches.kernel.org/6.12.54-018-clk-at91-peripheral-fix-return-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
