--- a/series.conf
+++ b/series.conf
@@ -11036,6 +11036,7 @@
 	patches.kernel.org/6.12.54-052-drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 	patches.kernel.org/6.12.54-053-net-sctp-fix-a-null-dereference-in-sctp_dispo.patch
 	patches.kernel.org/6.12.54-054-tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_c.patch
+	patches.kernel.org/6.12.54-055-net-mscc-ocelot-Fix-use-after-free-caused-by-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
