--- a/series.conf
+++ b/series.conf
@@ -11207,6 +11207,7 @@
 	patches.kernel.org/6.12.54-223-selftests-mm-skip-soft-dirty-tests-when-CONFI.patch
 	patches.kernel.org/6.12.54-224-media-mc-Clear-minor-number-before-put-device.patch
 	patches.kernel.org/6.12.54-225-Squashfs-add-additional-inode-sanity-checking.patch
+	patches.kernel.org/6.12.54-226-Squashfs-reject-negative-file-sizes-in-squash.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
