--- a/series.conf
+++ b/series.conf
@@ -11128,6 +11128,7 @@
 	patches.kernel.org/6.12.54-144-iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supp.patch
 	patches.kernel.org/6.12.54-145-kernel-sys.c-fix-the-racy-usage-of-task_lock-.patch
 	patches.kernel.org/6.12.54-146-KEYS-trusted_tpm1-Compare-HMAC-values-in-cons.patch
+	patches.kernel.org/6.12.54-147-lib-genalloc-fix-device-leak-in-of_gen_pool_g.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
