net/sctp: fix a null dereference in sctp_disposition sctp_sf_do_5_1D_ce() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11034,6 +11034,7 @@
 	patches.kernel.org/6.12.54-050-drm-vmwgfx-Fix-a-null-ptr-access-in-the-curso.patch
 	patches.kernel.org/6.12.54-051-drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.kernel.org/6.12.54-052-drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
+	patches.kernel.org/6.12.54-053-net-sctp-fix-a-null-dereference-in-sctp_dispo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
