--- a/series.conf
+++ b/series.conf
@@ -11159,6 +11159,7 @@
 	patches.kernel.org/6.12.54-175-PCI-xilinx-nwl-Fix-ECAM-programming.patch
 	patches.kernel.org/6.12.54-176-PCI-tegra-Convert-struct-tegra_msi-mask_lock-.patch
 	patches.kernel.org/6.12.54-177-PCI-sysfs-Ensure-devices-are-powered-for-conf.patch
+	patches.kernel.org/6.12.54-178-PCI-IOV-Add-PCI-rescan-remove-locking-when-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
