perf tools: Add fallback for exclude_guest (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11013,6 +11013,7 @@
 	patches.kernel.org/6.12.54-029-perf-session-Fix-handling-when-buffer-exceeds.patch
 	patches.kernel.org/6.12.54-030-perf-test-Don-t-leak-workload-gopipe-in-PERF_.patch
 	patches.kernel.org/6.12.54-031-perf-test-Add-a-test-for-default-perf-stat-co.patch
+	patches.kernel.org/6.12.54-032-perf-tools-Add-fallback-for-exclude_guest.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
