mm/thp: fix MTE tag mismatch when replacing zero-filled subpages (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11186,6 +11186,7 @@
 	patches.kernel.org/6.12.54-202-wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-r.patch
 	patches.kernel.org/6.12.54-203-wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A90.patch
 	patches.kernel.org/6.12.54-204-wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A75.patch
+	patches.kernel.org/6.12.54-205-mm-thp-fix-MTE-tag-mismatch-when-replacing-ze.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
