mailbox: zynqmp-ipi: Remove redundant mbox_controller_unregister() call (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11042,6 +11042,7 @@
 	patches.kernel.org/6.12.54-058-tools-build-Align-warning-options-with-perf.patch
 	patches.kernel.org/6.12.54-059-perf-python-split-Clang-options-when-invoking.patch
 	patches.kernel.org/6.12.54-060-tcp-take-care-of-zero-tp-window_clamp-in-tcp_.patch
+	patches.kernel.org/6.12.54-061-mailbox-zynqmp-ipi-Remove-redundant-mbox_cont.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
