--- a/series.conf
+++ b/series.conf
@@ -11106,6 +11106,7 @@
 	patches.kernel.org/6.12.54-122-bus-mhi-ep-Fix-chained-transfer-handling-in-r.patch
 	patches.kernel.org/6.12.54-123-bus-mhi-host-Do-not-use-uninitialized-dev-poi.patch
 	patches.kernel.org/6.12.54-124-clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-p.patch
+	patches.kernel.org/6.12.54-125-copy_sighand-Handle-architectures-where-sizeo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
