--- a/series.conf
+++ b/series.conf
@@ -11104,6 +11104,7 @@
 	patches.kernel.org/6.12.54-120-blk-crypto-fix-missing-blktrace-bio-split-eve.patch
 	patches.kernel.org/6.12.54-121-btrfs-avoid-potential-out-of-bounds-in-btrfs_.patch
 	patches.kernel.org/6.12.54-122-bus-mhi-ep-Fix-chained-transfer-handling-in-r.patch
+	patches.kernel.org/6.12.54-123-bus-mhi-host-Do-not-use-uninitialized-dev-poi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
