nfsd: refine and rename NFSD_MAY_LOCK (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11226,6 +11226,7 @@
 	patches.kernel.org/6.12.54-242-x86-kvm-Force-legacy-PCI-hole-to-UC-when-over.patch
 	patches.kernel.org/6.12.54-243-nfsd-Fix-NFSD_MAY_BYPASS_GSS-and-NFSD_MAY_BYP.patch
 	patches.kernel.org/6.12.54-244-NFSD-Replace-use-of-NFSD_MAY_LOCK-in-nfsd4_lo.patch
+	patches.kernel.org/6.12.54-245-nfsd-refine-and-rename-NFSD_MAY_LOCK.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
