nfsd: don't use sv_nrthreads in connection limiting calculations (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11227,6 +11227,7 @@
 	patches.kernel.org/6.12.54-243-nfsd-Fix-NFSD_MAY_BYPASS_GSS-and-NFSD_MAY_BYP.patch
 	patches.kernel.org/6.12.54-244-NFSD-Replace-use-of-NFSD_MAY_LOCK-in-nfsd4_lo.patch
 	patches.kernel.org/6.12.54-245-nfsd-refine-and-rename-NFSD_MAY_LOCK.patch
+	patches.kernel.org/6.12.54-246-nfsd-don-t-use-sv_nrthreads-in-connection-lim.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
