bpf: Fix metadata_dst leak __bpf_redirect_neigh_v{4,6} (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11046,6 +11046,7 @@
 	patches.kernel.org/6.12.54-062-mailbox-zynqmp-ipi-Remove-dev.parent-check-in.patch
 	patches.kernel.org/6.12.54-063-mailbox-zynqmp-ipi-Fix-out-of-bounds-access-i.patch
 	patches.kernel.org/6.12.54-064-mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
+	patches.kernel.org/6.12.54-065-bpf-Fix-metadata_dst-leak-__bpf_redirect_neig.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
