tpm_tis: Fix incorrect arguments in tpm_tis_probe_irq_single (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11061,6 +11061,7 @@
 	patches.kernel.org/6.12.54-077-cifs-Fix-copy_to_iter-return-value-check.patch
 	patches.kernel.org/6.12.54-078-smb-client-fix-missing-timestamp-updates-afte.patch
 	patches.kernel.org/6.12.54-079-cifs-Query-EA-LXMOD-in-cifs_query_path_info-f.patch
+	patches.kernel.org/6.12.54-080-tpm_tis-Fix-incorrect-arguments-in-tpm_tis_pr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
