sched/fair: Block delayed tasks on throttled hierarchy during dequeue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11253,6 +11253,7 @@
 	patches.kernel.org/6.12.54-269-cramfs-Verify-inode-mode-when-loading-from-di.patch
 	patches.kernel.org/6.12.54-270-writeback-Avoid-softlockup-when-switching-man.patch
 	patches.kernel.org/6.12.54-271-writeback-Avoid-excessively-long-inode-switch.patch
+	patches.kernel.org/6.12.54-272-sched-fair-Block-delayed-tasks-on-throttled-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
