--- a/series.conf
+++ b/series.conf
@@ -11073,6 +11073,7 @@
 	patches.kernel.org/6.12.54-089-arm64-dts-qcom-msm8939-Add-missing-MDSS-reset.patch
 	patches.kernel.org/6.12.54-090-arm64-dts-qcom-sdm845-Fix-slimbam-num-channel.patch
 	patches.kernel.org/6.12.54-091-arm64-dts-qcom-x1e80100-pmics-Disable-pm8010-.patch
+	patches.kernel.org/6.12.54-092-arm64-dts-ti-k3-am62a-main-Fix-main-padcfg-le.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
