--- a/series.conf
+++ b/series.conf
@@ -11001,6 +11001,7 @@
 	patches.kernel.org/6.12.54-017-clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-q.patch
 	patches.kernel.org/6.12.54-018-clk-at91-peripheral-fix-return-value.patch
 	patches.kernel.org/6.12.54-019-clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_m.patch
+	patches.kernel.org/6.12.54-020-perf-util-Fix-compression-checks-returning-1-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
