--- a/series.conf
+++ b/series.conf
@@ -11208,6 +11208,7 @@
 	patches.kernel.org/6.12.54-224-media-mc-Clear-minor-number-before-put-device.patch
 	patches.kernel.org/6.12.54-225-Squashfs-add-additional-inode-sanity-checking.patch
 	patches.kernel.org/6.12.54-226-Squashfs-reject-negative-file-sizes-in-squash.patch
+	patches.kernel.org/6.12.54-227-tracing-Fix-race-condition-in-kprobe-initiali.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
