--- a/series.conf
+++ b/series.conf
@@ -11088,6 +11088,7 @@
 	patches.kernel.org/6.12.54-104-media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.kernel.org/6.12.54-105-media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.54-106-media-mc-Fix-MUST_CONNECT-handling-for-pads-w.patch
+	patches.kernel.org/6.12.54-107-media-pci-ivtv-Add-missing-check-after-DMA-ma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
