media: mc: Fix MUST_CONNECT handling for pads with no links (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11087,6 +11087,7 @@
 	patches.kernel.org/6.12.54-103-media-cec-extron-da-hd-4k-plus-drop-external-.patch
 	patches.kernel.org/6.12.54-104-media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.kernel.org/6.12.54-105-media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.kernel.org/6.12.54-106-media-mc-Fix-MUST_CONNECT-handling-for-pads-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
