of: unittest: Fix device reference count leak in of_unittest_pci_node_verify (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11130,6 +11130,7 @@
 	patches.kernel.org/6.12.54-146-KEYS-trusted_tpm1-Compare-HMAC-values-in-cons.patch
 	patches.kernel.org/6.12.54-147-lib-genalloc-fix-device-leak-in-of_gen_pool_g.patch
 	patches.kernel.org/6.12.54-148-loop-fix-backing-file-reference-leak-on-valid.patch
+	patches.kernel.org/6.12.54-149-of-unittest-Fix-device-reference-count-leak-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
