LoongArch: Add cflag -fno-isolate-erroneous-paths-dereference (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11025,6 +11025,7 @@
 	patches.kernel.org/6.12.54-041-ASoC-SOF-ipc4-topology-Correct-the-minimum-ho.patch
 	patches.kernel.org/6.12.54-042-ASoC-SOF-ipc4-topology-Account-for-different-.patch
 	patches.kernel.org/6.12.54-043-ASoC-SOF-Intel-hda-pcm-Place-the-constraint-o.patch
+	patches.kernel.org/6.12.54-044-LoongArch-Add-cflag-fno-isolate-erroneous-pat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
