media: v4l2-subdev: Fix alloc failure check in v4l2_subdev_call_state_try() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10992,6 +10992,7 @@
 	patches.kernel.org/6.12.54-008-dma-mapping-fix-direction-in-dma_alloc-direct.patch
 	patches.kernel.org/6.12.54-009-KVM-SVM-Emulate-PERF_CNTR_GLOBAL_STATUS_SET-f.patch
 	patches.kernel.org/6.12.54-010-iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_.patch
+	patches.kernel.org/6.12.54-011-media-v4l2-subdev-Fix-alloc-failure-check-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
