--- a/series.conf
+++ b/series.conf
@@ -11108,6 +11108,7 @@
 	patches.kernel.org/6.12.54-124-clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-p.patch
 	patches.kernel.org/6.12.54-125-copy_sighand-Handle-architectures-where-sizeo.patch
 	patches.kernel.org/6.12.54-126-cpufreq-intel_pstate-Fix-object-lifecycle-iss.patch
+	patches.kernel.org/6.12.54-127-crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
