--- a/series.conf
+++ b/series.conf
@@ -11197,6 +11197,7 @@
 	patches.kernel.org/6.12.54-213-ext4-verify-orphan-file-size-is-not-too-big.patch
 	patches.kernel.org/6.12.54-214-ext4-increase-i_disksize-to-offset-len-in-ext.patch
 	patches.kernel.org/6.12.54-215-ext4-correctly-handle-queries-for-metadata-ma.patch
+	patches.kernel.org/6.12.54-216-ext4-avoid-potential-buffer-over-read-in-pars.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
