--- a/series.conf
+++ b/series.conf
@@ -11113,6 +11113,7 @@
 	patches.kernel.org/6.12.54-129-crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 	patches.kernel.org/6.12.54-130-eventpoll-Replace-rwlock-with-spinlock.patch
 	patches.kernel.org/6.12.54-131-fbdev-Fix-logic-error-in-offb-name-match.patch
+	patches.kernel.org/6.12.54-132-fs-ntfs3-Fix-a-resource-leak-bug-in-wnd_exten.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
