writeback: Avoid excessively long inode switching times (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11252,6 +11252,7 @@
 	patches.kernel.org/6.12.54-268-fs-Add-initramfs_options-to-set-initramfs-mou.patch
 	patches.kernel.org/6.12.54-269-cramfs-Verify-inode-mode-when-loading-from-di.patch
 	patches.kernel.org/6.12.54-270-writeback-Avoid-softlockup-when-switching-man.patch
+	patches.kernel.org/6.12.54-271-writeback-Avoid-excessively-long-inode-switch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
