--- a/series.conf
+++ b/series.conf
@@ -11049,6 +11049,7 @@
 	patches.kernel.org/6.12.54-065-bpf-Fix-metadata_dst-leak-__bpf_redirect_neig.patch
 	patches.kernel.org/6.12.54-066-mailbox-mtk-cmdq-mailbox-Switch-to-__pm_runti.patch
 	patches.kernel.org/6.12.54-067-mailbox-mtk-cmdq-Switch-to-pm_runtime_put_aut.patch
+	patches.kernel.org/6.12.54-068-mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
