--- a/series.conf
+++ b/series.conf
@@ -11116,6 +11116,7 @@
 	patches.kernel.org/6.12.54-132-fs-ntfs3-Fix-a-resource-leak-bug-in-wnd_exten.patch
 	patches.kernel.org/6.12.54-133-fs-quota-create-dedicated-workqueue-for-quota.patch
 	patches.kernel.org/6.12.54-134-fuse-fix-possibly-missing-fuse_copy_finish-ca.patch
+	patches.kernel.org/6.12.54-135-fuse-fix-livelock-in-synchronous-file-put-fro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
