--- a/series.conf
+++ b/series.conf
@@ -11134,6 +11134,7 @@
 	patches.kernel.org/6.12.54-150-openat2-don-t-trigger-automounts-with-RESOLVE.patch
 	patches.kernel.org/6.12.54-151-parisc-don-t-reference-obsolete-termio-struct.patch
 	patches.kernel.org/6.12.54-152-parisc-Remove-spurious-if-statement-from-raw_.patch
+	patches.kernel.org/6.12.54-153-nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
