--- a/series.conf
+++ b/series.conf
@@ -11011,6 +11011,7 @@
 	patches.kernel.org/6.12.54-027-perf-test-Update-sysfs-path-for-core-PMU-caps.patch
 	patches.kernel.org/6.12.54-028-perf-test-shell-lbr-Avoid-failures-with-perf-.patch
 	patches.kernel.org/6.12.54-029-perf-session-Fix-handling-when-buffer-exceeds.patch
+	patches.kernel.org/6.12.54-030-perf-test-Don-t-leak-workload-gopipe-in-PERF_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
