PCI: rcar-gen4: Fix PHY initialization (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11165,6 +11165,7 @@
 	patches.kernel.org/6.12.54-181-PCI-AER-Support-errors-introduced-by-PCIe-r6..patch
 	patches.kernel.org/6.12.54-182-PCI-j721e-Fix-programming-sequence-of-strap-s.patch
 	patches.kernel.org/6.12.54-183-PCI-keystone-Use-devm_request_irq-to-free-ks-.patch
+	patches.kernel.org/6.12.54-184-PCI-rcar-gen4-Fix-PHY-initialization.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
