--- a/series.conf
+++ b/series.conf
@@ -11153,6 +11153,7 @@
 	patches.kernel.org/6.12.54-169-mmc-core-SPI-mode-remove-cmd7.patch
 	patches.kernel.org/6.12.54-170-mmc-mmc_spi-multiple-block-read-remove-read-c.patch
 	patches.kernel.org/6.12.54-171-memory-samsung-exynos-srom-Fix-of_iomap-leak-.patch
+	patches.kernel.org/6.12.54-172-rtc-interface-Ensure-alarm-irq-is-enabled-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
