--- a/series.conf
+++ b/series.conf
@@ -11141,6 +11141,7 @@
 	patches.kernel.org/6.12.54-157-powerpc-pseries-msi-Fix-potential-underflow-a.patch
 	patches.kernel.org/6.12.54-158-pwm-berlin-Fix-wrong-register-in-suspend-resu.patch
 	patches.kernel.org/6.12.54-159-Revert-ipmi-fix-msg-stack-when-IPMI-is-discon.patch
+	patches.kernel.org/6.12.54-160-sched-deadline-Fix-race-in-push_dl_task.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
