fscontext: do not consume log entries when returning -EMSGSIZE (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10983,6 +10983,7 @@
 	patches.kernel.org/6.12.53-260-usb-cdns3-cdnsp-pci-remove-redundant-pci_disa.patch
 	patches.kernel.org/6.12.53-261-Linux-6.12.53.patch
 	patches.kernel.org/6.12.54-001-fs-always-return-zero-on-success-from-replace.patch
+	patches.kernel.org/6.12.54-002-fscontext-do-not-consume-log-entries-when-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
