scsi: sd: Fix build warning in sd_revalidate_disk() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11143,6 +11143,7 @@
 	patches.kernel.org/6.12.54-159-Revert-ipmi-fix-msg-stack-when-IPMI-is-discon.patch
 	patches.kernel.org/6.12.54-160-sched-deadline-Fix-race-in-push_dl_task.patch
 	patches.kernel.org/6.12.54-161-scsi-hpsa-Fix-potential-memory-leak-in-hpsa_b.patch
+	patches.kernel.org/6.12.54-162-scsi-sd-Fix-build-warning-in-sd_revalidate_di.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
