ACPI: property: Do not pass NULL handles to acpi_attach_data() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11235,6 +11235,7 @@
 	patches.kernel.org/6.12.54-251-ACPI-battery-Add-synchronization-between-inte.patch
 	patches.kernel.org/6.12.54-252-ACPI-property-Disregard-references-in-data-on.patch
 	patches.kernel.org/6.12.54-253-ACPI-property-Add-code-comments-explaining-wh.patch
+	patches.kernel.org/6.12.54-254-ACPI-property-Do-not-pass-NULL-handles-to-acp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
