--- a/series.conf
+++ b/series.conf
@@ -11149,6 +11149,7 @@
 	patches.kernel.org/6.12.54-165-sparc-fix-error-handling-in-scan_one_device.patch
 	patches.kernel.org/6.12.54-166-xtensa-simdisk-add-input-size-check-in-proc_w.patch
 	patches.kernel.org/6.12.54-167-xsk-Harden-userspace-supplied-xdp_desc-valida.patch
+	patches.kernel.org/6.12.54-168-mtd-rawnand-fsmc-Default-to-autodetect-buswid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
