drm/amd/display: Properly disable scaling on DCE6 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11053,6 +11053,7 @@
 	patches.kernel.org/6.12.54-069-drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
 	patches.kernel.org/6.12.54-070-drm-amd-display-Add-missing-DCE6-SCL_HORZ_FIL.patch
 	patches.kernel.org/6.12.54-071-drm-amd-display-Properly-clear-SCL_-_FILTER_C.patch
+	patches.kernel.org/6.12.54-072-drm-amd-display-Properly-disable-scaling-on-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
