ACPI: property: Disregard references in data-only subnode lists (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11233,6 +11233,7 @@
 	patches.kernel.org/6.12.54-249-ACPI-battery-initialize-mutexes-through-devm_.patch
 	patches.kernel.org/6.12.54-250-ACPI-battery-Check-for-error-code-from-devm_m.patch
 	patches.kernel.org/6.12.54-251-ACPI-battery-Add-synchronization-between-inte.patch
+	patches.kernel.org/6.12.54-252-ACPI-property-Disregard-references-in-data-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
