--- a/series.conf
+++ b/series.conf
@@ -11092,6 +11092,7 @@
 	patches.kernel.org/6.12.54-108-media-pci-mg4b-fix-uninitialized-iio-scan-dat.patch
 	patches.kernel.org/6.12.54-109-media-s5p-mfc-remove-an-unused-uninitialized-.patch
 	patches.kernel.org/6.12.54-110-media-venus-firmware-Use-correct-reset-sequen.patch
+	patches.kernel.org/6.12.54-111-media-vivid-fix-disappearing-Vendor-Command-W.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
