powerpc/powernv/pci: Fix underflow and leak issue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11137,6 +11137,7 @@
 	patches.kernel.org/6.12.54-153-nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep.patch
 	patches.kernel.org/6.12.54-154-pinctrl-samsung-Drop-unused-S3C24xx-driver-da.patch
 	patches.kernel.org/6.12.54-155-power-supply-max77976_charger-fix-constant-cu.patch
+	patches.kernel.org/6.12.54-156-powerpc-powernv-pci-Fix-underflow-and-leak-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
