perf vendor events arm64 AmpereOneX: Fix typo - should be l1d_cache_access_prefetches (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11007,6 +11007,7 @@
 	patches.kernel.org/6.12.54-023-perf-arm_spe-Correct-setting-remote-access.patch
 	patches.kernel.org/6.12.54-024-perf-arm-spe-Rename-the-common-data-source-en.patch
 	patches.kernel.org/6.12.54-025-perf-arm_spe-Correct-memory-level-for-remote-.patch
+	patches.kernel.org/6.12.54-026-perf-vendor-events-arm64-AmpereOneX-Fix-typo-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
