--- a/series.conf
+++ b/series.conf
@@ -11178,6 +11178,7 @@
 	patches.kernel.org/6.12.54-194-x86-umip-Check-that-the-instruction-opcode-is.patch
 	patches.kernel.org/6.12.54-195-x86-umip-Fix-decoding-of-register-forms-of-0F.patch
 	patches.kernel.org/6.12.54-196-selftests-mptcp-join-validate-C-flag-def-limi.patch
+	patches.kernel.org/6.12.54-197-s390-dasd-enforce-dma_alignment-to-ensure-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
