ACPI: TAD: Add missing sysfs_remove_group() for ACPI_TAD_RT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11067,6 +11067,7 @@
 	patches.kernel.org/6.12.54-083-s390-vmlinux.lds.S-Reorder-sections.patch
 	patches.kernel.org/6.12.54-084-s390-vmlinux.lds.S-Move-.vmlinux.info-to-end-.patch
 	patches.kernel.org/6.12.54-085-ACPI-property-Fix-buffer-properties-extractio.patch
+	patches.kernel.org/6.12.54-086-ACPI-TAD-Add-missing-sysfs_remove_group-for-A.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
