--- a/series.conf
+++ b/series.conf
@@ -11035,6 +11035,7 @@
 	patches.kernel.org/6.12.54-051-drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.kernel.org/6.12.54-052-drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
 	patches.kernel.org/6.12.54-053-net-sctp-fix-a-null-dereference-in-sctp_dispo.patch
+	patches.kernel.org/6.12.54-054-tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
