x86/umip: Check that the instruction opcode is at least two bytes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11175,6 +11175,7 @@
 	patches.kernel.org/6.12.54-191-spi-cadence-quadspi-Flush-posted-register-wri.patch
 	patches.kernel.org/6.12.54-192-spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
 	patches.kernel.org/6.12.54-193-x86-fred-Remove-ENDBR64-from-FRED-entry-point.patch
+	patches.kernel.org/6.12.54-194-x86-umip-Check-that-the-instruction-opcode-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
