slab: mark slab->obj_exts allocation failures unconditionally (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11182,6 +11182,7 @@
 	patches.kernel.org/6.12.54-198-s390-dasd-Return-BLK_STS_INVAL-for-EINVAL-fro.patch
 	patches.kernel.org/6.12.54-199-s390-Add-Wno-pointer-sign-to-KBUILD_CFLAGS_DE.patch
 	patches.kernel.org/6.12.54-200-slab-prevent-warnings-when-slab-obj_exts-vect.patch
+	patches.kernel.org/6.12.54-201-slab-mark-slab-obj_exts-allocation-failures-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
